--- a/calendar-alarm/imports/client/styles/components/_variables.scss
+++ b/calendar-alarm/imports/client/styles/components/_variables.scss
@@ -21,3 +21,4 @@ $padding-general:3%;
 //width
 $width-general:90%;
 $width-half:45%;
+$width-extra:400%;
